--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,12 @@
     <title>Inicio de Sesión - Librería Flor del Barrio</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="{{ url_for('static', filename='img/logolibreria.jpg') }}" type="image/x-icon">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon-96x96.png') }}" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='favicon.svg') }}" />
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" />
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='apple-touch-icon.png') }}" />
+    <meta name="apple-mobile-web-app-title" content="Librería Flor del Barrio" />
+    <link rel="manifest" href="{{ url_for('static', filename='site.webmanifest') }}" />
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
